Interface de configurações criada

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#075e54</color>
     <color name="colorPrimaryDark">#054d44</color>
     <color name="colorAccent">#25d366</color>
+    <color name="cinza_claro">#EEEEEE</color>
 </resources>
