1- Criação de metodo para atualizar dados do usuário no banco dados junto ao usuario do fire base (Nome,foto e email); 2 - preparação para criação delistagemd e contatos via Database

--- a/app/src/main/res/layout/activity_configuracoes.xml
+++ b/app/src/main/res/layout/activity_configuracoes.xml
@@ -59,9 +59,10 @@
             android:text="Name" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/ImagemSalvarNome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="atualizarNomeUsuario"
             app:srcCompat="@drawable/ic_baseline_edit_24" />
     </LinearLayout>
 
