--- a/app/src/main/res/layout/fragment_contatos.xml
+++ b/app/src/main/res/layout/fragment_contatos.xml
@@ -5,12 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.ContatosFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerListaContatos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Contatos"
-        android:textSize="24sp" />
-
+        android:scrollbars="vertical" />
 </FrameLayout>
