--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -8,8 +8,10 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerMensagens"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:layout_weight="1" />
 
     <LinearLayout
@@ -35,7 +37,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editTextTextPersonName2"
+                android:id="@+id/editTextMessagem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -55,17 +57,18 @@
         </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
+            android:id="@+id/fabEnviar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
             android:clickable="true"
+            android:elevation="2dp"
+            android:onClick="enviar"
             app:backgroundTint="@color/colorPrimary"
             app:elevation="0dp"
             app:fabSize="mini"
-            app:srcCompat="@drawable/ic_baseline_send_24"
-            android:elevation="2dp"/>
+            app:srcCompat="@drawable/ic_baseline_send_24" />
 
     </LinearLayout>
 
