--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -48,7 +48,7 @@
                 android:inputType="textPersonName" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/imageCamera"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginEnd="8dp"
